--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,14 @@
 name = "kcp-rust"
 version = "0.2.0"
 edition = "2021"
-authors = ["KCP Rust Port"]
+authors = ["Leihu.Xi leihuxi@gmail.com"]
 description = "A high-performance async Rust implementation of KCP - A Fast and Reliable ARQ Protocol"
 license = "MIT"
 keywords = ["kcp", "network", "protocol", "udp", "arq", "async", "tokio"]
 categories = ["network-programming", "asynchronous"]
+readme = "README.md"
+repository = "https://github.com/leihuxi/rust-kcp"
+homepage = "https://github.com/leihuxi/rust-kcp"
 
 [features]
 default = ["tokio"]
