--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Leihu.Xi leihuxi@gmail.com"]
 description = "A high-performance async Rust implementation of KCP - A Fast and Reliable ARQ Protocol"
 license = "MIT"
-keywords = ["kcp", "network", "protocol", "udp", "arq", "async", "tokio"]
+keywords = ["kcp", "udp", "arq", "async", "tokio"]
 categories = ["network-programming", "asynchronous"]
 readme = "README.md"
 repository = "https://github.com/leihuxi/rust-kcp"
